# message-format

./: .deny.toml  .typos.toml  CONTRIBUTING.md  Cargo.toml  README.md
.github/: copyright.sh
.github/workflows/: ci.yml
.tickets/: mf-0r1c.md  mf-0w13.md  mf-1m8f.md  mf-1mha.md  mf-2w7t.md  mf-3koc.md  mf-5h50.md  mf-5qns.md  mf-5tfz.md  mf-62cy.md  mf-7ofr.md  mf-7u4z.md  mf-81cx.md  mf-8nu9.md  mf-9i48.md  mf-9pb1.md  mf-a3iu.md  mf-ao77.md  mf-bmid.md  mf-bx2q.md  mf-dxk8.md  mf-f3ae.md  mf-fm5e.md  mf-kplr.md  mf-maph.md  mf-nc6y.md  mf-nsgk.md  mf-ocrl.md  mf-ow2b.md  mf-q4qc.md  mf-rt54.md  mf-ryyt.md  mf-s5fv.md  mf-u9pj.md  mf-ude0.md  mf-v289.md  mf-v5rv.md  mf-vl4a.md  mf-xdf5.md  mf-yr4e.md  (+39 more)
apps/message-format-cli/: Cargo.toml
apps/message-format-cli/src/: main.rs
apps/message-format-lsp/: Cargo.toml  test.mf2  test.mf2.json  test.mf2.toml
apps/message-format-lsp/src/: analysis.rs  capabilities.rs  diagnostics.rs  document.rs  main.rs  manifest.rs  navigate.rs  scanner.rs  server.rs
crates/message-format/: Cargo.toml
crates/message-format-compiler/: Cargo.toml
crates/message-format-compiler/src/: emit.rs  ir.rs  lib.rs  manifest.rs  resource.rs  semantic.rs  test_support.rs
crates/message-format-compiler/src/compile/: encoder.rs  error.rs  frontend.rs  interning.rs  lowering.rs  mod.rs  tests.rs
crates/message-format-compiler/src/compile/frontend/: bindings.rs  document.rs  local_eval.rs  matching.rs  pattern.rs  raw_match.rs  rewrite.rs
crates/message-format-compiler/src/syntax/: ast.rs  charset.rs  ident.rs  literal.rs  mod.rs  parser.rs  semantic.rs  span.rs
crates/message-format-conformance/: Cargo.toml
crates/message-format-conformance/src/: harness.rs  lib.rs  runtime_helpers.rs
crates/message-format-conformance/src/tr35/: datetime_fn.rs  declarations.rs  errors.rs  formatting.rs  helpers.rs  mod.rs  number_fn.rs  pattern_selection.rs  string_fn.rs  syntax.rs
crates/message-format-resource-json/: Cargo.toml
crates/message-format-resource-json/src/: lib.rs
crates/message-format-resource-toml/: Cargo.toml
crates/message-format-resource-toml/src/: lib.rs
crates/message-format-runtime/: Cargo.toml
crates/message-format-runtime/src/: builtin.rs  catalog.rs  error.rs  formatter.rs  lib.rs  schema.rs  value.rs  vm.rs
crates/message-format/src/: args.rs  catalog.rs  formatter.rs  lib.rs  options.rs
docs/: architecture-boundaries.md  error-model.md  runtime-internals-plan.md  runtime-vm-semantics.md
fixtures/expected/: icu_string_rtl.txt  raw_match_integer_exact.txt  raw_match_two_locals.txt
fixtures/mf2/: function_call.mf2  icu_default_float.mf2  icu_plural_select.mf2  icu_selectordinal_select.mf2  icu_string_rtl.mf2  interpolation.mf2  raw_match_integer_exact.mf2  raw_match_offset_selector.mf2  raw_match_two_locals.mf2  select_default.mf2
spec/: catalog-binary-format.md  default-semantics.md
wind_tunnel/: Cargo.toml
wind_tunnel/benches/: compiler.rs  formatting.rs  loading.rs
wind_tunnel/src/: lib.rs
