[workspace]
members = [
    "apps/message-format-cli",
    "apps/message-format-lsp",
    "crates/message-format",
    "crates/message-format-compiler",
    "crates/message-format-conformance",
    "crates/message-format-resource-json",
    "crates/message-format-resource-toml",
    "crates/message-format-runtime",
    "wind_tunnel",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
authors = ["forest-rs contributors"]
repository = "https://github.com/forest-rs/message-format"
readme = "README.md"
keywords = ["i18n", "icu", "localization", "message-format"]
categories = ["internationalization", "text-processing"]

[workspace.dependencies]
message-format = { path = "crates/message-format", version = "0.1.0" }
message-format-compiler = { path = "crates/message-format-compiler", version = "0.1.0" }
message-format-resource-json = { path = "crates/message-format-resource-json", version = "0.1.0" }
message-format-resource-toml = { path = "crates/message-format-resource-toml", version = "0.1.0" }
message-format-runtime = { path = "crates/message-format-runtime", version = "0.1.0" }

[workspace.lints]
# LINEBENDER LINT SET - Cargo.toml - v8
# See https://linebender.org/wiki/canonical-lints/
rust.keyword_idents_2024 = "forbid"
rust.non_ascii_idents = "forbid"
rust.non_local_definitions = "forbid"
rust.unsafe_op_in_unsafe_fn = "forbid"

rust.elided_lifetimes_in_paths = "warn"
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.trivial_numeric_casts = "warn"
rust.unnameable_types = "warn"
rust.unreachable_pub = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_macro_rules = "warn"
rust.unused_qualifications = "warn"

clippy.too_many_arguments = "allow"

clippy.allow_attributes_without_reason = "warn"
clippy.cast_possible_truncation = "warn"
clippy.cast_possible_wrap = "warn"
clippy.collection_is_never_read = "warn"
clippy.dbg_macro = "warn"
clippy.debug_assert_with_mut_call = "warn"
clippy.default_trait_access = "warn"
clippy.doc_markdown = "warn"
clippy.fn_to_numeric_cast_any = "warn"
clippy.infinite_loop = "warn"
clippy.large_stack_arrays = "warn"
clippy.mismatching_type_param_order = "warn"
clippy.missing_assert_message = "warn"
clippy.missing_fields_in_debug = "warn"
clippy.same_functions_in_if_condition = "warn"
clippy.semicolon_if_nothing_returned = "warn"
clippy.should_panic_without_expect = "warn"
clippy.todo = "warn"
clippy.unseparated_literal_suffix = "warn"
clippy.use_self = "warn"

clippy.cargo_common_metadata = "warn"
clippy.negative_feature_names = "warn"
clippy.redundant_feature_names = "warn"
clippy.wildcard_dependencies = "warn"
# END LINEBENDER LINT SET
