[package]
name = "wind_tunnel"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
icu_locale_core = { default-features = false, version = "2.1.1" }
message-format-compiler.workspace = true
message-format-runtime = { features = ["icu4x"], workspace = true }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "formatting"
harness = false

[[bench]]
name = "compiler"
harness = false

[[bench]]
name = "loading"
harness = false
