[package]
name = "message-format-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "CLI for compiling MessageFormat source files into binary catalogs"
keywords.workspace = true
categories.workspace = true

[dependencies]
message-format-compiler.workspace = true
message-format-resource-json.workspace = true
message-format-resource-toml.workspace = true

[lints]
workspace = true
