[package]
name = "message-format-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Language Server Protocol implementation for MessageFormat 2."
publish = false

[dependencies]
env_logger = "0.11"
log = "0.4"
lsp-server = "0.7"
lsp-types = "0.95"
message-format-compiler = { path = "../../crates/message-format-compiler" }
message-format-resource-json = { path = "../../crates/message-format-resource-json" }
message-format-resource-toml = { path = "../../crates/message-format-resource-toml" }
serde = { features = ["derive"], version = "1" }
serde_json = "1"

[lints]
workspace = true
