[package]
name = "message-format-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Compiler from MF2 text to message-format catalog bytecode."

[dependencies]
icu_normalizer = { default-features = false, features = [
    "compiled_data",
], version = "2.1.1" }
message-format-runtime = { path = "../message-format-runtime" }
serde = { features = ["derive"], version = "1.0" }
toml = "0.9"

[lints]
workspace = true
