[package]
name = "message-format-resource-toml"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "TOML resource adapter for message-format compiler resource inputs."

[dependencies]
message-format-compiler.workspace = true
profiling = { optional = true, workspace = true }
toml = "1"

[features]
profiling = ["dep:profiling", "message-format-compiler/profiling"]

[lints]
workspace = true
